# weather-app

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  adapter.py  config.py  db.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  jobs.py  locations.json.example  main.py  monitor.py  notifier.py  pyproject.toml  requirements.txt  weather.py  wsgi.py
app/: __init__.py  adapter.py  config.py  db.py  helpers.py  jobs.py  monitor.py  notifier.py  scheduler.py  startup.py  state.py  weather.py
app/routes/: api.py  config.py  setup.py
app/templates/: base.html  setup.html
app/templates/config/: location_form.html  settings.html
ntfy/etc/: server.yml
templates/config/: locations.html
tests/: conftest.py  test_adapter.py  test_db.py  test_helpers.py  test_integration.py  test_jobs.py  test_main.py  test_notifier.py  test_routes.py  test_weather.py
